# momoisay-rs

./: .gitignore  Cargo.toml  README.md  flake.nix
frames/: animated-01-01.txt  animated-01-02.txt  animated-01-03.txt  animated-01-04.txt  animated-01-05.txt  animated-02-01.txt  animated-02-02.txt  animated-02-03.txt  animated-02-04.txt  animated-02-05.txt  static-01.txt
src/: cli.rs  display.rs  frames.rs  main.rs
