[package]
name = "momoisay-rs"
version = "0.1.0"
edition = "2024"
description = "Momoisay is a CLI program like cowsay, but instead of a talking cow, it's Saiba Momoi from Blue Archive!"
license = "GPL-3.0"
repository = "https://github.com/haruki-nikaidou/momoisay-rs"
authors = ["Haruki Nikaidou <nharuki@pm.me>"]

[dependencies]
